[package]
name = "dynamips_c"
version = "0.2.23"
edition = "2021"
workspace = ".."
publish = false

[lib]
crate-type = ["staticlib","rlib"]

[dependencies]
libc = "0.2"
libc_alloc = "1.0"

[build-dependencies]
autocfg = "1"
cc = "1.0"

[features]
ENABLE_LINUX_ETH = []
ENABLE_GEN_ETH = []
ENABLE_IPV6 = []
USE_UNSTABLE = []
