[package]
name = "dynamips_c"
version = "0.2.23"
edition = "2021"
workspace = ".."
publish = false

[lib]
crate-type = ["staticlib","rlib"]

[dependencies]
fn_abi = "3.0.0"
function_name = "0.3"
libc = "0.2"
libc_alloc = "1.0"
likely_stable = "0.1"
setjmp = "0.1"
sprintf = "0.3"

[build-dependencies]
autocfg = "1"
cc = "1.0"

[features]
ENABLE_LINUX_ETH = []
ENABLE_GEN_ETH = []
ENABLE_IPV6 = []
USE_UNSTABLE = []
fastcall= []
